tShape::Grid implemented. Running.

--- a/Evolution/Evolution.rc
+++ b/Evolution/Evolution.rc
@@ -91,39 +91,39 @@ FONT 8, "Ms Shell Dlg"
 }
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDD_EDITOR DIALOG 0, 0, 210, 260
+IDD_EDITOR DIALOG 0, 0, 210, 255
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
 CAPTION "Editor"
 FONT 8, "Ms Shell Dlg"
 {
-    GROUPBOX        "Left mouse button", IDM_EDIT_MODE,   10,  17, 100, 158, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Move",          IDM_MOVE,            25,  32, 34, 8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
-    AUTORADIOBUTTON "Random",        IDM_RANDOM_STRATEGY, 25,  47, 43, 8, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Cooperate",     IDM_COOPERATE,       25,  62, 49, 8, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Defect",        IDM_DEFECT,          25,  77, 37, 8, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Tit4Tat",       IDM_TIT4TAT,         25,  92, 39, 8, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "No animals",    IDM_KILL_ANIMALS,    25, 107, 55, 8, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Mutation rate", IDM_MUT_RATE,        25, 122, 57, 8, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Fertility",     IDM_FERTILITY,       25, 137, 37, 8, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Food",          IDM_FOOD_STOCK,      25, 152, 32, 8, 0, WS_EX_LEFT
+    GROUPBOX        "Left mouse button", IDM_EDIT_MODE,   10,  10, 100, 158, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "Move",          IDM_MOVE,            25,  25, 34, 8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
+    AUTORADIOBUTTON "Random",        IDM_RANDOM_STRATEGY, 25,  40, 43, 8, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "Cooperate",     IDM_COOPERATE,       25,  55, 49, 8, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "Defect",        IDM_DEFECT,          25,  70, 37, 8, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "Tit4Tat",       IDM_TIT4TAT,         25,  85, 39, 8, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "No animals",    IDM_KILL_ANIMALS,    25, 100, 55, 8, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "Mutation rate", IDM_MUT_RATE,        25, 115, 57, 8, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "Fertility",     IDM_FERTILITY,       25, 130, 37, 8, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "Food",          IDM_FOOD_STOCK,      25, 145, 32, 8, 0, WS_EX_LEFT
 
-    GROUPBOX        "Shape",     IDM_EDIT_SHAPE_BASE, 115, 17, 80, 50, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Circle",    IDM_EDIT_CIRCLE,     133, 35, 33,  8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
-    AUTORADIOBUTTON "Rectangle", IDM_EDIT_RECTANGLE,  133, 50, 49,  8, 0, WS_EX_LEFT
+    GROUPBOX        "Shape",     IDM_EDIT_SHAPE_BASE, 115, 10, 80, 65, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "Circle",    IDM_EDIT_CIRCLE,     130, 28, 50,  8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
+    AUTORADIOBUTTON "Rectangle", IDM_EDIT_RECTANGLE,  130, 42, 50,  8, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "All Grid",  IDM_EDIT_GRID_AREA,  130, 58, 50,  8, 0, WS_EX_LEFT
 
-    GROUPBOX        "Operation", IDM_EDIT_OPERATION_BASE,     115,  70, 80, 105, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Set",       IDM_EDIT_OPERATION_SET,      130,  85, 34,   8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
-    AUTORADIOBUTTON "Min",       IDM_EDIT_OPERATION_MIN,      130, 100, 43,   8, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Max",       IDM_EDIT_OPERATION_MAX,      130, 115, 49,   8, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Add",       IDM_EDIT_OPERATION_ADD,      130, 130, 37,   8, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Subtract",  IDM_EDIT_OPERATION_SUBTRACT, 130, 145, 39,   8, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "Mean",      IDM_EDIT_OPERATION_MEAN,     130, 160, 55,   8, 0, WS_EX_LEFT
+    GROUPBOX        "Operation", IDM_EDIT_OPERATION_BASE,     115,  78, 80, 90, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "Set",       IDM_EDIT_OPERATION_SET,      130,  93, 34,  8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
+    AUTORADIOBUTTON "Min",       IDM_EDIT_OPERATION_MIN,      130, 108, 43,  8, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "Max",       IDM_EDIT_OPERATION_MAX,      130, 122, 49,  8, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "Add",       IDM_EDIT_OPERATION_ADD,      130, 138, 37,  8, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "Subtract",  IDM_EDIT_OPERATION_SUBTRACT, 130, 153, 39,  8, 0, WS_EX_LEFT
 		
-	GROUPBOX        "Size", 100,                                                                           10, 178, 184, 35, 0, WS_EX_LEFT
-    CONTROL         "Size", IDM_EDIT_SIZE, TRACKBAR_CLASS, WS_TABSTOP | WS_BORDER | TBS_NOTICKS,           18, 193, 166, 14,    WS_EX_LEFT
+	GROUPBOX        "Size", 100,                                                                           10, 171, 185, 35, 0, WS_EX_LEFT
+    CONTROL         "Size", IDM_EDIT_SIZE, TRACKBAR_CLASS, WS_TABSTOP | WS_BORDER | TBS_NOTICKS,           18, 186, 167, 14,    WS_EX_LEFT
 
-    GROUPBOX        "Intensity", 101,                                                                      10, 216, 184, 35, 0, WS_EX_LEFT
-    CONTROL         "Intensity", IDM_EDIT_INTENSITY, TRACKBAR_CLASS, WS_TABSTOP | WS_BORDER | TBS_NOTICKS, 18, 231, 166, 14,    WS_EX_LEFT
+    GROUPBOX        "Intensity", 101,                                                                      10, 209, 185, 35, 0, WS_EX_LEFT
+    CONTROL         "Intensity", IDM_EDIT_INTENSITY, TRACKBAR_CLASS, WS_TABSTOP | WS_BORDER | TBS_NOTICKS, 18, 224, 167, 14,    WS_EX_LEFT
 }
 
 //
