--- a/EvolutionConsole/Test/Test_2.in
+++ b/EvolutionConsole/Test/Test_2.in
@@ -1,7 +1,7 @@
 #SetConfigValue Config::tId::nrOfHistorySlots 10
 #OpenTraceFile  "main_trace.out"
 PostRefresh
-PostSetBrushMode tBrushMode::randomStrategy
+PostSetBrushMode tBrushMode::randomStrat
 PostDoEdit   37  51  
 PostRefresh
 PostDoEdit   92  52 
