--- a/EvolutionConsole/Test/Test_4.in
+++ b/EvolutionConsole/Test/Test_4.in
@@ -5,7 +5,7 @@
 #
 PostRefresh
 PostRefresh
-PostSetBrushMode tBrushMode::randomStrategy
+PostSetBrushMode tBrushMode::randomStrat
 PostDoEdit   90  52 
 PostRefresh
 PostDoEdit  121  49 
