--- a/Evolution/WindowConfiguration4.cnf
+++ b/Evolution/WindowConfiguration4.cnf
@@ -1,14 +1,14 @@
 MoveWindow IDM_DISP_WINDOW 6134 1275 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 3889 1156 300 130
-ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_PERF_WINDOW 3867 1417 300 130
+ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW 3832 1060 2576 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_EDIT_WINDOW 6045 1542 331 453
-ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_HIST_INFO 3886 1173 300 150
+ShowWindow IDM_EDIT_WINDOW SW_HIDE
+MoveWindow IDM_HIST_INFO 3866 1268 300 150
 ShowWindow IDM_HIST_INFO SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW 3872 1355 300 150
+MoveWindow IDM_CRSR_WINDOW 3864 1118 300 150
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_STAT_WINDOW 3846 1550 400 430
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
