Self healing window configuration fixed, StopWatch added

--- a/Evolution/WindowConfiguration2.cnf
+++ b/Evolution/WindowConfiguration2.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_MAIN_WINDOW 0 43 2560 945
-ShowWindow IDM_MAIN_WINDOW SW_SHOW
-MoveWindow IDM_APPL_WINDOW -8 -8 2576 1056
-ShowWindow IDM_APPL_WINDOW SW_SHOW
-MoveWindow IDM_DISP_WINDOW 2328 151 211 219
-ShowWindow IDM_DISP_WINDOW SW_SHOW
-MoveWindow IDM_EDIT_WINDOW 2315 380 211 559
-ShowWindow IDM_EDIT_WINDOW SW_SHOW
-MoveWindow IDM_CRSR_WINDOW 0 170 260 150
-ShowWindow IDM_CRSR_WINDOW SW_SHOW
-MoveWindow IDM_STAT_WINDOW -3 322 400 420
-ShowWindow IDM_STAT_WINDOW SW_SHOW
-MoveWindow IDM_PERF_WINDOW 0 50 260 120
-ShowWindow IDM_PERF_WINDOW SW_SHOW
-MoveWindow IDM_STATUS_BAR 0 0 0 0
-ShowWindow IDM_MINI_WINDOW SW_SHOW
-MoveWindow IDM_HIST_WINDOW 0 988 2560 30
-ShowWindow IDM_HIST_WINDOW SW_HIDE
+MoveWindow IDM_DISP_WINDOW 6055 1372 181 219
+ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_PERF_WINDOW 3895 1131 300 130
+ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_APPL_WINDOW 3832 1060 2576 1056
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_EDIT_WINDOW 6051 1604 331 453
+ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_HIST_INFO 3898 1285 300 150
+ShowWindow IDM_HIST_INFO SW_SHOWNORMAL
+MoveWindow IDM_CRSR_WINDOW 3891 1442 300 150
+ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_STAT_WINDOW 3882 1603 400 430
+ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW 5936 1123 416 239
+ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MAIN_WINDOW 3840 1111 2560 975
+ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
