--- a/Evolution/WindowConfiguration1.cnf
+++ b/Evolution/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_HIST_WINDOW 0 1142 2194 30
-ShowWindow IDM_HIST_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW 0 43 2194 1099
-ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW -8 -8 2210 1210
-ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_DISP_WINDOW 991 487 211 219
+MoveWindow IDM_DISP_WINDOW 6140 1368 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_EDIT_WINDOW 991 317 211 559
+MoveWindow IDM_PERF_WINDOW 3889 1120 300 130
+ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_APPL_WINDOW 3832 1065 2576 1056
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_EDIT_WINDOW 6058 1602 331 453
 ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW 0 300 300 150
+MoveWindow IDM_HIST_INFO 3885 1251 300 150
+ShowWindow IDM_HIST_INFO SW_SHOWNORMAL
+MoveWindow IDM_CRSR_WINDOW 3902 1417 300 150
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_STAT_WINDOW 200 200 400 430
+MoveWindow IDM_STAT_WINDOW 3878 1593 400 430
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 0 0 0 0
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW 0 0 216 139
+MoveWindow IDM_MINI_WINDOW 5958 1123 416 239
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MAIN_WINDOW 3840 1116 2560 975
+ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
