Refactoring win32_thread split off from win32_util.cpp

--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -147,7 +147,7 @@
   <ItemGroup>
     <ClInclude Include="BoolOp.h" />
     <ClInclude Include="debug.h" />
-    <ClInclude Include="DisplayFunctor.h" />
+    <ClInclude Include="EventInterface.h" />
     <ClInclude Include="Int24.h" />
     <ClInclude Include="kGridPoint.h" />
     <ClInclude Include="observerInterface.h" />
