--- a/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj
+++ b/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj
@@ -22,7 +22,7 @@
     <ProjectGuid>{24689A59-099E-42FB-B8CA-568D3DA36612}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>EvolutionCoreInterface</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -134,6 +134,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalOptions> /GH /Gh</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
