RefreshRateDialog intermediate version. Not running correctly.

--- a/Evolution/Evolution.rc
+++ b/Evolution/Evolution.rc
@@ -71,13 +71,19 @@ CAPTION "Info über Evolution"
 FONT 8, "MS Shell Dlg", 0, 0, 1
 {
     ICON            "", IDC_STATIC, 14, 14, 21, 20, SS_ICON, WS_EX_LEFT
-//    LTEXT           "Evolution, Version 1.0", IDC_STATIC, 42, 14, 114, 8, SS_LEFT | SS_NOPREFIX, WS_EX_LEFT
     LTEXT           VER_PRODUCTNAME_STR,  IDC_STATIC, 42, 14, 114,  8, SS_LEFT | SS_NOPREFIX, WS_EX_LEFT
     LTEXT           "Copyright (C) 2018", IDC_STATIC, 42, 26, 114,  8, SS_LEFT, WS_EX_LEFT
     DEFPUSHBUTTON   "OK",                 IDOK,      113, 41,  50, 14, WS_GROUP, WS_EX_LEFT
 }
 
-
+//IDD_REFRESH_RATE_DIALOG DIALOGEX 0, 0, 170, 62
+//STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
+//CAPTION "Refresh Rate"
+//FONT 8, "MS Shell Dlg", 0, 0, 1
+//{
+//    EDITTEXT      IDD_REFRESH_RATE_EDIT_CTL,  42, 14, 40, 10, ES_NUMBER
+//    DEFPUSHBUTTON "OK",                IDOK, 113, 41, 50, 14, WS_GROUP, WS_EX_LEFT
+//}
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDD_DISPLAY_OPTIONS DIALOG 0, 0, 110, 111
