--- a/EvoWindows/EvoWindows.vcxproj.filters
+++ b/EvoWindows/EvoWindows.vcxproj.filters
@@ -140,5 +140,23 @@
     <ClInclude Include="win32_historyInfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="win32_shape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_rectShape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_individualShape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_leftColumn.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_gridPointShape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_rightColumn.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
