--- a/EvoWindows/EvoWindows.vcxproj
+++ b/EvoWindows/EvoWindows.vcxproj
@@ -190,6 +190,7 @@
     <ClInclude Include="win32_shape.h" />
     <ClInclude Include="win32_statistics.h" />
     <ClInclude Include="win32_status.h" />
+    <ClInclude Include="win32_textDisplay.h" />
     <ClInclude Include="win32_worker_thread.h" />
     <ClInclude Include="win32_workThreadInterface.h" />
     <ClInclude Include="win32_wrappers.h" />
