--- a/EvoWindows/EvoWindows.vcxproj
+++ b/EvoWindows/EvoWindows.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="win32_histWrappers.h" />
     <ClInclude Include="win32_individualShape.h" />
     <ClInclude Include="win32_leftColumn.h" />
+    <ClInclude Include="win32_memorySlot.h" />
     <ClInclude Include="win32_packGridPoint.h" />
     <ClInclude Include="win32_rectShape.h" />
     <ClInclude Include="win32_rightColumn.h" />
