--- a/EvoWindows/EvoWindows.vcxproj.filters
+++ b/EvoWindows/EvoWindows.vcxproj.filters
@@ -161,5 +161,8 @@
     <ClInclude Include="win32_textDisplay.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="win32_memorySlot.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
