--- a/Evolution/MonitorConfigurations.cnf
+++ b/Evolution/MonitorConfigurations.cnf
@@ -69,3 +69,18 @@ MonitorConfiguration  "WindowConfiguration5.cnf"
 0    # secondary monitor
 0   # end of MonitorConfiguration
 
+MonitorConfiguration  "WindowConfiguration6.cnf"
+1   # monitor number
+   0   0   2560 1440    # monitor rectangle
+   0   0   2560 1400    # work area rectangle
+1    # primary monitor
+2   # monitor number
+ -1920 1072     0 2152    # monitor rectangle
+ -1920 1072     0 2112    # work area rectangle
+0    # secondary monitor
+3   # monitor number
+ 3840 1065   6400 2145    # monitor rectangle
+ 3840 1065   6400 2105    # work area rectangle
+0    # secondary monitor
+0   # end of MonitorConfiguration
+
