--- a/ShapeLib/ShapeLib.vcxproj
+++ b/ShapeLib/ShapeLib.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{8830DA2B-C953-4702-A9E7-3BCE05366F1B}</ProjectGuid>
+    <ProjectGuid>{F05986E5-5428-415C-AA6B-46DE6E36806B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>EvoWindows</RootNamespace>
+    <RootNamespace>ShapeLib</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -70,33 +70,34 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoHistGlue;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Direct3D;$(SolutionDir)Win32_history;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoHistGlue;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Direct3D;$(SolutionDir)Win32_history;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)ShapeLib;$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoHistGlue;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Direct3D;$(SolutionDir)Win32_history;C:\Programme\Microsoft DirectX SDK (June 2010)\Include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir)ShapeLib;$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoHistGlue;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Direct3D;$(SolutionDir)Win32_history;C:\Programme\Microsoft DirectX SDK (June 2010)\Include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>Use</PrecompiledHeader>
+      <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
+      <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -104,10 +105,13 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
+      <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -115,81 +119,50 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
+      <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>Use</PrecompiledHeader>
+      <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
+      <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="win32_colorManager.cpp" />
-    <ClCompile Include="win32_evoController.cpp" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="win32_aboutBox.cpp" />
-    <ClCompile Include="win32_crsrWindow.cpp" />
-    <ClCompile Include="win32_displayOptions.cpp" />
-    <ClCompile Include="win32_draw.cpp" />
-    <ClCompile Include="win32_editor.cpp" />
-    <ClCompile Include="win32_editorWrappers.cpp" />
-    <ClCompile Include="win32_evoHistWindow.cpp" />
-    <ClCompile Include="win32_focusPoint.cpp" />
-    <ClCompile Include="win32_gridWindow.cpp" />
-    <ClCompile Include="win32_historyInfo.cpp" />
-    <ClCompile Include="win32_histWrappers.cpp" />
-    <ClCompile Include="win32_statistics.cpp" />
-    <ClCompile Include="win32_status.cpp" />
-    <ClCompile Include="win32_worker_thread.cpp" />
-    <ClCompile Include="win32_workThreadInterface.cpp" />
-    <ClCompile Include="win32_wrappers.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="win32_colorManager.h" />
-    <ClInclude Include="win32_evoController.h" />
-    <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="win32_aboutBox.h" />
-    <ClInclude Include="win32_crsrWindow.h" />
-    <ClInclude Include="win32_displayOptions.h" />
-    <ClInclude Include="win32_draw.h" />
-    <ClInclude Include="win32_editor.h" />
-    <ClInclude Include="win32_editorWrappers.h" />
-    <ClInclude Include="win32_evoHistWindow.h" />
-    <ClInclude Include="win32_focusPoint.h" />
-    <ClInclude Include="win32_gridWindow.h" />
-    <ClInclude Include="win32_historyInfo.h" />
-    <ClInclude Include="win32_histWrappers.h" />
-    <ClInclude Include="win32_packGridPoint.h" />
-    <ClInclude Include="win32_scriptHook.h" />
-    <ClInclude Include="win32_statistics.h" />
-    <ClInclude Include="win32_status.h" />
-    <ClInclude Include="win32_textDisplay.h" />
-    <ClInclude Include="win32_worker_thread.h" />
-    <ClInclude Include="win32_workThreadInterface.h" />
-    <ClInclude Include="win32_wrappers.h" />
+    <ClInclude Include="win32_gridPointShape.h" />
+    <ClInclude Include="win32_individualShape.h" />
+    <ClInclude Include="win32_leftColumn.h" />
+    <ClInclude Include="win32_memorySlot.h" />
+    <ClInclude Include="win32_rectShape.h" />
+    <ClInclude Include="win32_shape.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="stdafx.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
