--- a/ShapeLib/ShapeLib.vcxproj
+++ b/ShapeLib/ShapeLib.vcxproj
@@ -72,12 +72,14 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(SolutionDir)EvoWindows;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Utilities;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(SolutionDir)EvoWindows;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Utilities;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -154,6 +156,7 @@
     <ClInclude Include="win32_leftColumn.h" />
     <ClInclude Include="win32_memorySlot.h" />
     <ClInclude Include="win32_rectShape.h" />
+    <ClInclude Include="win32_rightColumn.h" />
     <ClInclude Include="win32_shape.h" />
   </ItemGroup>
   <ItemGroup>
