--- a/ShapeLib/ShapeLib.vcxproj.filters
+++ b/ShapeLib/ShapeLib.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="win32_shape.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="win32_rightColumn.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
